# Mandelbrot

./: CMakeLists.txt  Mandelbrot.cpp  Mandelbrot.h  main.cpp
